2.1.2.dev
----------------

- fix issue172: avoid traceback when user/index/name/version is accessed.


2.1.1
----------------

- fix replication issue reported by a customer: if a replica lags
  behind a master and a file was created and then deleted meanwhile,
  the replica would get stuck with a FileReplicationError.  We now
  let the master report a 410 GONE code so that the replica knows
  it can safely proceed because the file was deleted later anyways.

- generate "systemd" configuration example when "--gen-config" is issued.
  Thanks Pavel Sedlak.

- fix issue109: fix relative URLs in simple index pages and 404 errors on
  uploading toxresults and downloading files when serving under an outside URL
  with a sub path.  Thanks to Joe Holloway for detailed infos.

- drop limitation on maximum documentation size. Body size is now only
  controlled by frontends such as nginx. Thanks Stephan Erb.

- use newer version of virtualenv for jenkins trigger. Thank brunsgaard.

2.1.0
----------------

- make replication more precise: if a file cannot be replicated,
  fail with an error log and try again in a few seconds.
  This helps to maintain a consistent replica and discover 
  the potential remaining bugs in the replication code.

- add who/when metadata to release files, doczips and test results
  and preserve it during push operations so that any such file provides
  some history which can be visualized via the web-plugin.  The metadata
  is also exposed via the json API (/USER/INDEX/PROJECTNAME[/VERSION])

- fix issue113: provide json status information at /+status including roles 
  and replica polling status, UUIDs of the repository. See new
  server status docs for more info.

- support for external authentication plugins: new devpiserver_auth_user 
  hook which plugins can implement for user/password validation and
  for providing group membership.

- support groups for acl_upload via the ":GROUPNAME" syntax. This